test/sparse/domains/parentNotValueError.good
parentNotValueError.chpl:2: error: building a sparse subdomain of a type; please supply a domain value instead
