test/sparse/domains/parentNotValueError.chpl

var SS: sparse subdomain(domain(1));  // error: argument is a type
